separate p tag test on austinos modal

--- a/child_pages/cc-elections/Candidates/austino.html
+++ b/child_pages/cc-elections/Candidates/austino.html
@@ -51,9 +51,12 @@
               <img src="../../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" class="close">
               <h4 class="quick-sum">quick summary</h4>
               <h6 class="page-title">Robert A. Austino</h6>
-              <p>The quick summary for Candidate Austino: Former Sheriff Austino is a democrat who appears to be running with former commissioner Capizola 
+              <p>Former Sheriff Austino is a democrat who appears to be running with former commissioner Capizola 
               'against' candidates Smith and Perella. The sheriff has lengthy experience working in government as sheriff, but no direct experience as a 
-              commissioner. There seems to be no easily accessible information regarding his platform or agenda, and Inform the Vote has not yet received a
+              commissioner. There seems to be no easily accessible information regarding his platform or agenda. 
+              </p>
+              <p>              
+                Also, Inform the Vote has not yet received a
               response from him regarding campaign related information. A surface level guess would be that Austino and Capizola would be more center-left 
               than Perella and Smith, but we cannot verify that at the moment. Click the red x at the top of this box and then scroll down down for more in-depth 
               information and sources.
