bashaw content update

--- a/child_pages/cc-elections/us_repubprimary_senate.html
+++ b/child_pages/cc-elections/us_repubprimary_senate.html
@@ -51,31 +51,25 @@
         <div class="modal-content">
           <img src="../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" class="close">
           <h4 class="quick-sum">quick summary</h4>
-          <h6 class="page-title">Democrat Primary for County Commissioner</h6>
+          <h6 class="page-title">Republican Primary for US Senate</h6>
           <p>This year 1 seat is open in New Jersey for the US Senate, where incumbent Bob Menendez is likely to face serious challenges considering a recent
             scandal regarding alleged corruption.  Four or five candidates are running for the Republican nomination, as Peter Vallorosi may or may not be 
             switching to an indepedent. 
+        
             <br>
-            Curtis Bashaw is the Cumberland County Republican favorite as Mike Testa is his campaign chair. Bashaw is a successful 
-            businessman in South Jersey with lots of politically related leadership experience and was inspired to jump into politics in response to the 
-            governments handling of COVID.
+            Curtis Bashaw, a successful businessman who has various political leadership experience, is the Cumberland County Republican favorite as Mike Testa is his campaign chair. 
             <br>
-            Christine Serrano-Glassner is the current mayor of Mendham, NJ and she seems to have a good balance of political and business experience. She 
-            wants to tackle inflation, to protect social security and medicare, increase funding for law enforcement, and more.
+            Christine Serrano-Glassner is the current mayor of Mendham, NJ and she seems to have a good balance of political and business experience. 
             <br>
-            Albert Harshaw is a highly decorated military vet who was an international law major and is certified in maritime law. He has very detailed 
-            information on his site regarding specific policy proposals regarding energy policy, childhood education, the space race, and more.
+            Albert Harshaw is a highly decorated military vet who was an international law major and is certified in maritime law. 
             <br>
             Justin Murphy is a big advocate for military funding as he wants to be able to fund two wars simultaneously, secure the border with military 
-            resources, and increase military presence in the South China Sea. He also wants a 12% flat tax, a balanced budget, is pro-life, and has other
-            common conservative beliefs.
+            resources, and increase military presence in the South China Sea. 
             <br>
-            Peter Vallorosi appears to be switching to an independent candidate, but as of 4/29/2024 he is still on the posted registry as a republican. He is 
-            very focused on a pure application of the constitution and high transparency of the government on a single webiste. He also has many other common 
-            conservative beliefs.
+            Peter Vallorosi is very focused on a pure application of the constitution and high transparency of the government on a single webiste.
             <br>
             Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
-          </p>
+        </p>
         </div>
       
       </dialog>
