--- a/child_pages/cc-elections/Candidates/bashaw.html
+++ b/child_pages/cc-elections/Candidates/bashaw.html
@@ -119,7 +119,7 @@
                     
                 </ul>
             </div>
-            <h4 class="sub-heading">party messaging</h4>
+            <!-- <h4 class="sub-heading">party messaging</h4> -->
 
             <br>
             <br>
