--- a/index.html
+++ b/index.html
@@ -79,9 +79,14 @@
           </ul>
 
           <p>
-            Click on the primary election you're interested in and navigate the interactive primary ballots to learn more about the candidates. Don't forget to use the back 
-            button on your computer or phone to get back to the ballot, and there's also the red, three-lined 'hamburger' menu at the top left of the screen to help broader
-            navigation. Finally, if you're hungry for more in-depth knowledge about our local politics and the methods we used on this site, take a closer look at our home page. 
+            Click on the primary election you're interested in and navigate the interactive primary ballots to learn more about the 
+            candidates. We've provided summaries as there is a lot of information to digest. We suggest skimming the summaries and the 
+            candidate pages we've provided to help streamline the process. However, all official campaign pages and social media links are provided 
+            to ensure access to the full amount of information and to verify any of our info. Don't forget to use the back 
+            button on your computer or phone to get back to the ballot, and there's also the red, three-lined 'hamburger' menu at the top 
+            left of the screen to help broader
+            navigation. Finally, if you're hungry for more in-depth knowledge about our local politics and the methods we used on this 
+            site, take a closer look at our home page. 
             Click the red x at the top right of pop-up boxes like this to proceed through the site. Have fun!
           </p>
 
