--- a/child_pages/cc-elections/Candidates/vallorosi.html
+++ b/child_pages/cc-elections/Candidates/vallorosi.html
@@ -51,7 +51,7 @@
               <p>
                 Peter Vallorosi is an independent candidate for US Senate. He seems to be very focused on a 
                     very pure application of the constitution and applying full transparency of government business through a regularly updated, single source 
-                    website. He enumerates many ideas throughout his website, including simplifying the tax code, balancing the budged, reducing the size of 
+                    website. He enumerates many ideas throughout his website, including simplifying the tax code, balancing the budget, reducing the size of 
                     government, removing donor influence from politics, and much more. Vallorosi was also very prompt with communicating with Inform the Vote.
                     Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
               </p>
@@ -88,49 +88,39 @@
                 <ul class="testa-agenda">
                     <li>
                         <ol>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
+                            <li>Simplify the tax code</li>
+                            <li>Lower tax rates</li>
+                            <li>Balance the budget</li>
+                            <li>Reduce the size of the government</li>
+                            <li>Eliminate donor interests influencing candidates</li>
+                            <li>Enhance election integrity – Single Election Day</li>
+                            <li>Affordable college tuition</li>
+                            <li>End gerrymandering</li>
+                            <li>Term limits for politicians</li>
+                            <li>Secure the bordering while enhancing legal immigration</li>
+                            <li>Stabilize the dollar through standardization</li>
+                            <li>Implement a new Social Security system in addition to the current system</li>
+                            <li>Single issue bills, elimate ‘pork’</li>
+                            <li>Congressional districts should determine election results, no more ‘winner takes all’</li>
+                            <li>Better veteran treatment</li>
+                            <li>Seems to be pro-life</li>
+                            <li>Foreign aid should be loans</li>
+                            <li>Believes in a federal sales tax that would be the only tax</li>
+                            <li>Believes we should never spend more than the federal budget</li>
+                            <li>Wants to restore American pride rather than casting doubt through revisionist history</li>
                         </ol>
                     </li>
                     
                 </ul>
             </div>
-            <h4 class="sub-heading">party messaging</h4>
 
             <br>
             <br>
 
-            <div class="agenda-per-party-site">
-                <p></p>
-            </div>
-
-            <br>
-            <br>
-
-            <h4 class="sub-heading">policy positions</h4>
-            <div class="policy-positions">
-                <ol>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>   
-                    <li></li>
-                </ol>
-            </div>
-
-            <br>
-            <br>
-
-            <h4 class="sub-heading">experience</h4>
+            <!-- <h4 class="sub-heading">experience</h4>
             <div class="experience">
                 
-            </div>
+            </div> -->
 
     </div>
  </div>   
