--- a/child_pages/cc-elections/us_demprimary_senate.html
+++ b/child_pages/cc-elections/us_demprimary_senate.html
@@ -10,7 +10,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=REM:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,600;1,700&family=Roboto+Mono&display=swap" rel="stylesheet">
-    <title>Inform The Vote</title>
+<script src="../../app.js" async></script>    
+<title>Inform The Vote</title>
 </head>
 <body>
     <div class="menu-wrap">
@@ -43,6 +44,32 @@
             </div>
         </div>
     </div>
+
+    <dialog id="myModal" class="modal">
+
+        <!-- Modal content -->
+        <div class="modal-content">
+          <img src="../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" class="close">
+          <h4 class="quick-sum">quick summary</h4>
+          <h6 class="page-title">Democrat Primary for US Senate</h6>
+          <p>This year 1 seat is open in New Jersey for the US Senate, where incumbent Bob Menendez is likely to face serious challenges considering a recent
+            scandal regarding alleged corruption.  Three candidates are running for the Democrat nomination:
+        
+            <br>
+            Patricia Campos-Medina is a first-generation American who has been a union and community organizer for over 30 years who has worked for 
+            or received appointments from presidents such as Clinton, Bush, and Obama.
+            <br>
+            Lawrence Hamm has been an advocate for African-Americans, human rights, and civil rights for over 52 years and at age 20 was the youngest 
+            councilman ever to be appointed in Newark.
+            <br>
+            Andy Kim was a Rhoads scholar who has been a national security expert at the Pentagon and a civilian advisor to the military in Afghanistan.
+            <br>
+            Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
+          </p>
+        </div>
+      
+      </dialog>
+
 
     <img src="../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn">
     <div id="sample-ballot">
