basic update on vallorosi and primary regarding independence

--- a/child_pages/cc-elections/Candidates/vallorosi.html
+++ b/child_pages/cc-elections/Candidates/vallorosi.html
@@ -49,7 +49,8 @@
               <h4 class="quick-sum">quick summary</h4>
               <h6 class="page-title">Peter Vallorosi</h6>
               <p>
-                Peter Vallorosi is an independent candidate for US Senate. He seems to be very focused on a 
+                Peter Vallorosi is an independent candidate for US Senate. He won't be on the primary ballot June 4th, but he will be on the ballot in November 
+                for the general election. He seems to be very focused on a 
                     very pure application of the constitution and applying full transparency of government business through a regularly updated, single source 
                     website. He enumerates many ideas throughout his website, including simplifying the tax code, balancing the budget, reducing the size of 
                     government, removing donor influence from politics, and much more. Vallorosi was also very prompt with communicating with Inform the Vote.
