--- a/child_pages/cc-elections/us_repubprimary_senate.html
+++ b/child_pages/cc-elections/us_repubprimary_senate.html
@@ -53,8 +53,8 @@
           <h4 class="quick-sum">quick summary</h4>
           <h6 class="page-title">Republican Primary for US Senate</h6>
           <p>This year 1 seat is open in New Jersey for the US Senate, where incumbent Bob Menendez is likely to face serious challenges considering a recent
-            scandal regarding alleged corruption.  Four or five candidates are running for the Republican nomination, as Peter Vallorosi may or may not be 
-            switching to an indepedent. 
+            scandal regarding alleged corruption.  Four candidates are running for the Republican nomination. Also, Peter Vallorosi will not be on the primary 
+            ballot, but he will be running in the general in November as an independent.
         
             <br>
             Curtis Bashaw, a successful businessman who has various political leadership experience, is the Cumberland County Republican favorite as Mike Testa is his campaign chair. 
