--- a/child_pages/cc-elections/Candidates/campos-medina.html
+++ b/child_pages/cc-elections/Candidates/campos-medina.html
@@ -7,6 +7,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Calistoga&family=Roboto+Mono&display=swap" rel="stylesheet">
+        <script src="../../../app.js" async></script>
         <title>Inform The Vote</title>
     </head>
     <body>
@@ -39,6 +40,23 @@
                 </div>
             </div>
         </div>
+
+        <dialog id="myModal" class="modal">
+
+            <!-- Modal content -->
+            <div class="modal-content">
+              <img src="../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" class="close">
+              <h4 class="quick-sum">quick summary</h4>
+              <h6 class="page-title">Patricia Campos-Medina</h6>
+              <p>
+                Patricia Campos-Medina is a first-generation American who wants to help ensure the American dream is available to future generations.
+                She has been a union organizer, a community organizer, and an advocate for many causes for over 30 years. She has received appointments 
+                from former presidents Clinton, Bush, and Obama. 
+                Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
+              </p>
+            </div>
+          
+          </dialog>
     
         <img src="../../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn">
 <div class="container">
