campos medina content update

--- a/child_pages/cc-elections/Candidates/campos-medina.html
+++ b/child_pages/cc-elections/Candidates/campos-medina.html
@@ -92,12 +92,26 @@
             <div class="agenda-thesis">
                 
                 <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <li>Wants to root out money in politics.</li>
+                    <li>Wants to address affordable housing crisis in NJ.</li>
+                    <li>Wants to raise the federal minimum wage.</li>
+                    <li>Wants to invest in middle class jobs.</li>
+                    <li>Advocates for family paid-leave.</li>
+                    <li>Advocates for accessible childcare and elder-care.</li>
+                    <li>Wants immigration reform.</li>
+                    <li>Opposes the southern border wall.</li>
+                    <li>Supports addressing root-causes in foreign countries.</li>
+                    <li>Wants a pathway to citizenship for undocumented workers.</li>
+                    <li>Wants business development in urban areas.</li>
+                    <li>Wants expansion of federal small loans.</li>
+                    <li>Wants medicare for all.</li>
+                    <li>Pro-choice advocate.</li>
+                    <li>Wants a federal ban on assault weapons.</li>
+                    <li>Wants improvement in K-12 education.</li>
+                    <li>Wants better accessibility to trades, tech, and STEM training programs.</li>
+                    <li>Wants to eliminate high interest loans and cancel student loan debt.</li>
+                    <li>Wants green union jobs.</li>
+                    <li>Wants a ceasefire in Gaza and a two-state solution.</li>
                 </ul>
             </div>
 
@@ -121,6 +135,17 @@
             <br>
 
             <h4 class="sub-heading">experience</h4>
+            She was appointed to Labor Advisory Committee for US Trade relations in 2000 by President Clinton and reappointed in 2004 by President Bush. 
+            In 2008 she was appointed to the Transition Team for the Office of Trade Relations by President Obama.
+            In 2004 she led a successful collective bargaining strike for casino workers in Atlantic City, and was then made the New Jersey State 
+            Director for UNITE HERE, the union that led the strike.
+            Served on boards and commissions such as the NJ Casino Redevelopment Authority, the NJ Economic Growth Council, the NY-NJ Port Security 
+            Task Force, and the NJ Restart and Recovery Advisory Council (related to COVID). 
+            She was the executive director of the Worker Institute at ILR-Cornell University where she focused on collective bargaining rights.
+            She led programs to prevent harassment against women and LGBTQIA+ in workplaces, to address the gender pay gap, to increase work safety for 
+            nurses, and to increase labor rights for domestic workers.
+            Led efforts to increase the amount of women in appointed offices.
+
             <div class="experience">
                 
             </div>
