general content updates

--- a/child_pages/cc-elections/Candidates/alexander.html
+++ b/child_pages/cc-elections/Candidates/alexander.html
@@ -53,6 +53,13 @@
                 force because he was racially profiled in his youth, so he wanted to bring systemic change to the force. He has many left 
                 leaning items on his agenda including being pro-choice, addressing the gender wage gap, passing the Equality Act, supporting 
                 climate change policy, and more.
+                <br>
+                <h6 class="page-title">The Difference</h6>
+                When asked how he would differentiate himself from the other candidates at a Democrat meet and greet event, candidate Alexander 
+                pointed out that he knows the district since he's lived here his whole life, while others have not. He also knows that this is not a 
+                progressive district and he is not running a progressive campaign. He also recognizes that the country is in a deep debt and therefore 
+                he took the time to make sure all of his proposals have a proper budget that won't put us further into debt.
+                <br>
                 Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
               </p>
             </div>
