--- a/child_pages/cc-elections/unanswered_questions.html
+++ b/child_pages/cc-elections/unanswered_questions.html
@@ -57,134 +57,46 @@
                     intricacies of our electoral system and reinforce the integrity of our democratic processes.</p>
             </div>
             <div class="ua-content">
-                <P>1. Who is Charles Laspata, the Democrat candidate for State Senator? Did he literally ‘ghost’ the
-                campaign as the Atlantic City Press recently reported? Is this not an indicator of lack of cohesiveness 
-                within the democrat party? Could they not have replaced him on the ticket?</P>
+                <P>1. Why are only 2 out of 4 primary election candidates featured on the county democrats 
+                    <a href="https://cumberlandnjdems.com/elections/our-democratic-candidates/">website</a>? While the party 
+                    could be exercising their right to endorse certain candidates, that does not seem to be explicitly stated. 
+                    If they are exercising a specific endorsement, what is the reason? Whatever the reason, 
+                    <a href="https://perellaandsmithforcumberland.com/">here</a> is the website 
+                    for the other two candidates.
+                </P>
 
-                <p>2. If Charles Laspata is not actually a legitimate candidate, will that make Mike Testa (the
-                candidate for the Republicans) win by default? Without a legitimate challenger , would we as a
-                community feel as though his re-election was truly meritorious? Furthermore, if the county
-                doesn’t have dedicated events such as town halls, debates, etc, are election winners winning
-                meritoriously?</p>
+                <p>2. In regards to the aforementioned candidates that seem to be endorsed by the county democrat party, what is their 
+                    agenda and platform? The county website provides general background information and experience regarding the candidates, 
+                    but very little or no information regarding issues facing the county and how they would handle them.
+                </p>
 
-                <p>3. It seems as though Erik Simonsen and Antwan McClellan present themselves as a part of Team Testa, with very 
-                    similar messaging online. However, at public events some individual perspectives arise. Can they offer up any 
-                    individual perspectives in formal messaging that might give us a clearer picture of their individual agendas, 
-                    especially since independent minded voters may not simply vote party-line?
+                <p>3. Regarding the 4 candidates for the county commissioner race, how are they specifically differentiated from each other? 
+                    In other words, in regards to specific issues facing the county, how would choosing any one of them produce different expected 
+                    outcomes?
+                </p>
+
+                <p> 4. Similarly, thinking forward to the ultimate general election in November, how would voting for the primary candidates for 
+                    county commissioner produce different expected outcomes than the incumbents? In other words, there are 2 republican incumbents 
+                    running for re-election. Since they are already doing the job, why would voting for any of the democrat primary candidates be a 
+                    significant difference or improvement upon how things are currently being handled?
+                </p>
+
+                <p>5. Similarly, how would voting for any of the candidates in either the US Senate or US House of Representative candidates be 
+                    significantly different or an improvement upon the incumbents?
 
                 </p>
 
-                <p> 4. Similarly, Damita White-Morris and Eddie Bonner seem to have paired up, and John Capizola and La Rae Smith 
-                    seem to have paired up. What can those candidates offer up individually to help independent-minded voters make 
-                    clear choices as opposed to voting party-line?
-
-                </p>
-
-                <p>5. Art Marchand's agenda seems to be focused on improving the overall quality of life in the county so family's like 
-                    his can thrive and prosper. But how does he plan to accomplish that in terms of policy, action-plans, and tax funded 
-                    programs?
-
-                </p>
-
-                <p>6. Is Damita White-Morris’ only agenda issue education? It seems as though she wants to increase
-                    education funding to update school buildings and salaries… How exactly does she propose to
-                    accomplish this? 
-
-                </p>
-
-                <p>7. The topic of equity came up at the candidate's forum and White-Morris' reply was based on vague talking points. 
-                    Could she elaborate on the specifics of that topic, meaning what specific goals she has in terms of 
-                    legislation and any ideas which may affect tax funded institutions?
-
-                </p>
-
-                <p>8. Similarly, when asked about handling the budget, White-Morris' answers were a bit vague. Perhaps she knows there 
-                    are particular issues with the current budget, particular grants we are not currently using, or specific people 
-                    she knows who ought to be held accountable for previous inappropriate use of funds. Can she clarify or was she 
-                    simply offering common sense approaches to the budget?
-
-                </p>
-
-                <p>9. Dr. Perella has advocated for various LGBTQ+IA issues numerous times on social media and in public. Can they 
-                    clarify what specific goals they have in terms of legislation, policy, and any ideas which may affect tax funded 
-                    institutions and programs?
-
-                </p>
-
-                <p>10. Dr. Perella was the only candidate at the candidate's forum who opposed armed security in schools. There was 
-                    also a bit of back and forth regarding the reasoning, in which they claimed the data doesn't support it and there 
-                    have been instances in which armed security did not prevent gun violence in schools. Would they like to follow-up 
-                    on the topic?
-
-                </p>11. Dr. Perella also seems to have taken pro-choice, pro-equity, and anti-patriarchy stances on social media, but 
-                it's not quite clear exactly what they advocate for in terms of policy and ideas which affect tax funded institutions. 
-                Could they follow up with specific, clear stances?
-
-                <p>12. Eddie Bonner seems to have teamed up with Damita White-Morris on the campaign trail. However, it seems as though 
-                    he may be piggy-backing off of White-Morris' campaign, especially given that I have attended numerous events 
-                    and have yet to see him. Would he care to follow up and make it clear where he stands as a politician, 
-                    especially for independent-minded voters who might not necessarily vote party-line?
-
-                </p>
-
-                <p>13.Jim Sauro's agenda seems to be focused on developing businesses and attracting jobs to the county. Could he 
-                    elaborate how he will accomplish that in terms of policy, action-plans, and tax-funded programs?
-                </p>
-
-                <p>14. Given that Capizola was appointed instead of elected when Commissioner Castellini retired, and the party 
-                    messaging for Capizola is a bit surface level, would he care to elaborate his political vision including his 
-                    agenda and policy priorities?
-
-                </p>
-
-                <p>15. Would Capizola care to elaborate on why he is strongly against school vouchers?
-
-                </p>
-
-                <p>16. At the candidate's forum, Capizola briefly spoke about being a recent first time gun owner. Would he care to 
-                    elaborate on his stance on gun rights and gun violence?
-
-                </p>
-
-                <p>17. Would Mike Donato and Robert Austino like to put forward their positions on how they would handle gun violence, 
-                    illegal guns, homelessness, the drug epidemic, and dangerous off-road vehicles?
-
-                </p>
-
-                <p>17. There have been rumors circulating regarding Dr. Perella's picture not being included on campaign advertising. 
-                    Would anyone from the democrat party care to comment on that?
-
-                </p>
-
-                <p>18. Would Sandy Taylor like to elaborate on how she would handle developing eco-tourism and how she would address 
-                    poverty, homelessness, and the drug epidemic?
-
-                </p>
-
-                <p>19. With the lack of press coverage in the area, can we really be sure the available candidate information is 
-                    properly verified through checks and balances? Are any of the candidates willing to support an action plan to 
-                    rectify this problem? The problem has gotten so bad, that I was told at a Democrat meet and greet that I was not 
-                    welcome because I "ask too many questions". Should we let this problem continue?
-                </p>
-
-                <p>20. With the lack of cohesion within the Republican party on a national level, can we be sure that our county's 
-                    Republican party remain cohesive if elected?
-                </p>
-
-                <p>21. With the recent overturning of Roe v Wade bringing the issue of abortion policy to the state level, what are 
-                    our Senate and Assembly candidates specific policies regarding abortion? What is their ideal policy and how far 
-                    might they be willing to negotiate towards a compromise given that this is such a polarizing topic?
-                </p>
-
-                <p>22. Given that Donald Trump is being indicted in Georgia at least in part due to an alleged alternate slate of 
-                    electors being used to disrupt the election, what can our candidates tell us about how our state's parties select 
-                    their slates of electors? Furthermore, what can they tell us to ensure us that no election funny business is going 
-                    on?
+                <p>6. Will there be any public events between now and the primary election where voters can meet the democrat primary candidates? 
+                    You can clearly see on their <a href="https://cumberlandnjdems.com/events/">website</a> that events aren't regularly updated, 
+                    and we are unaware of any public events at the county level, such as meet and greets, town halls, etc. This leaves a high chance 
+                    that local voters do not directly know their 'representatives'. By contrast, you can see on the 
+                    <a href="https://www.ccrrogop.org/event-calendar">county republican site</a> a regularly 
+                    updated calendar, with a bi-weekly breakfast that candidates regularly attend.
                 </p>
                 
-                <p>23. Why is the office of the surrogate relevant to voting? Couldn’t either of the candidates
-                modernize the office forms and provide better in-person service (their proposed agendas)?</p>
-
+                <p>7. If any events become posted on the county democrat party site, will they include all the candidates or only the ones who 
+                    seem to be endorsed?
+                </p>
             </div>
         </div>
     </div>
