--- a/index.html
+++ b/index.html
@@ -89,7 +89,16 @@
             to ensure access to the full amount of information and to verify any of our info. Don't forget to use the back 
             button on your computer or phone to get back to the ballot, and there's also the red, three-lined 'hamburger' menu at the top 
             left of the screen to help broader
-            navigation. Finally, if you're hungry for more in-depth knowledge about our local politics and the methods we used on this 
+            navigation. 
+            <br>
+            <br>
+            Given that we spend a lot of time researching and analyzing voting information, there is a good chance we are making observations the 
+            average constituent might not make. We invite you to take a look at our 
+            <a href="https://www.informthevotenj.com/child_pages/cc-elections/unanswered_questions">Unanswered Questions</a> page to help bring 
+            awareness to potential gaps in information regarding our county elections.
+            <br>
+            <br>
+            Finally, if you're hungry for more in-depth knowledge about our local politics and the methods we used on this 
             site, take a closer look at our home page. 
             Click the red x at the top right of pop-up boxes like this to proceed through the site. Have fun!
           </p>
@@ -199,7 +208,7 @@
                     <li class="ss-li"><strong><a href="child_pages/cc-elections/unanswered_questions.html">Unanswered Questions </a></strong>While Inform The Vote has made many attempts to contact candidates for 
                     further information, we are still left with several unanswered questions.</li>
 
-                    <li class="ss-li"><strong><a href="child_pages/candidates-forum-op-ed.html">Candidates Forum Op-Ed </a></strong>With election season coming to an end, what might be one active voter's take on possibly the most important event of the campaign season be?</li>
+                    <!-- <li class="ss-li"><strong><a href="child_pages/candidates-forum-op-ed.html">Candidates Forum Op-Ed </a></strong>With election season coming to an end, what might be one active voter's take on possibly the most important event of the campaign season be?</li> -->
                 </ul>
             </div>
         </div>
