hamburger and modal cleanup

--- a/child_pages/cc-elections/Candidates/hamm.html
+++ b/child_pages/cc-elections/Candidates/hamm.html
@@ -45,8 +45,8 @@
 
             <!-- Modal content -->
             <div class="modal-content">
-              <img src="../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" class="close">
-              <h4 class="quick-sum">quick summary</h4>
+                <img src="../../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" class="close">
+                <h4 class="quick-sum">quick summary</h4>
               <h6 class="page-title">Lawrence Hamm</h6>
               <p>
                 Lawrence Hamm has been an advocate for African-Americans, human rights, and civil rights for 52 years. At age 20 he was the youngest
