--- a/child_pages/cc-elections/Candidates/kim.html
+++ b/child_pages/cc-elections/Candidates/kim.html
@@ -45,8 +45,8 @@
 
             <!-- Modal content -->
             <div class="modal-content">
-              <img src="../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" class="close">
-              <h4 class="quick-sum">quick summary</h4>
+                <img src="../../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" class="close">
+                <h4 class="quick-sum">quick summary</h4>
               <h6 class="page-title">Andy Kim</h6>
               <p>
                 Andy Kim is a current Congressman who was a Rhoads Scholar, a national security expert at the Pentagon, and a civilan advisor to the 
