--- a/child_pages/cc-elections/Candidates/campos-medina.html
+++ b/child_pages/cc-elections/Candidates/campos-medina.html
@@ -45,7 +45,7 @@
 
             <!-- Modal content -->
             <div class="modal-content">
-              <img src="../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" class="close">
+              <img src="../../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" class="close">
               <h4 class="quick-sum">quick summary</h4>
               <h6 class="page-title">Patricia Campos-Medina</h6>
               <p>
