--- a/child_pages/cc-elections/cc_demprimary_county_commissioner_2024.html
+++ b/child_pages/cc-elections/cc_demprimary_county_commissioner_2024.html
@@ -28,6 +28,7 @@
                         <li class="link"><a href="../cc-elections/cc_election_issues.html">County Issues</a></li>
                         <li class="link"><a href="../cc-elections/us_repubprimary_senate.html">Republican Primary US Senate</a></li>
                         <li class="link"><a href="../cc-elections/us_demprimary_senate.html">Democrat Primary US Senate</a></li>
+                        <li class="link"><a href="../child_pages/cc-elections/us_houseofrepresentatives_demprimary.html">Democrat Primary US House of Representatives</a></li>
                         <li class="link"><a href="../child_pages/cc-elections/us_president_demprimary.html">Democrat Primary President</a></li>
                         <!-- <li class="link"><a href="../vsb-elections/vsb_election_candidates.html">Vineland School Board Elections</a></li>
                         <li class="link"><a href="../vsb-elections/vsb_election_issues.html">School Board Issues</a></li>
