--- a/child_pages/cc-elections/Candidates/austino.html
+++ b/child_pages/cc-elections/Candidates/austino.html
@@ -85,6 +85,7 @@
     <div class="candidate-agenda">
         <h4 class="sub-heading">Website</h4>
         <div class="website">
+            <a href="https://www.facebook.com/profile.php?id=61558533437326" target="_blank" rel="noopener noreferrer" class="website-link">Facebook Campaign Site</a>
             <a href="https://cumberlandnjdems.com/elections/our-democratic-candidates/" target="_blank" rel="noopener noreferrer" class="website-link">Cumberland County Democrats Site</a>
             <a href="https://www.facebook.com/robert.austino/" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a>
         </div>
