updated perellas insta from old one to current one

--- a/child_pages/events.html
+++ b/child_pages/events.html
@@ -50,37 +50,19 @@
 
             <div class="event-card">
                 <ul class="event-info">
-                    <li class="name"><strong>Campaign Meet-n-Greet, Ocean County Ravioli Fest</strong></li>
-                    <li class="description">Opportunity to meet Candidate Murphy.</li>
-                    <li class="date-and-time">04/26/24 - 4pm</li>
-                    <li class="location">American Legion, 499 N. Main Street, Barnegat, NJ 08005</li>
-                </ul>
-            </div>
-
-            <div class="event-card">
-                <ul class="event-info">
-                    <li class="name"><strong>CCRRO Breakfast Meeting</strong></li>
-                    <li class="description">Hear the current Cumberland County Republicans messaging and meet the party.</li>
-                    <li class="date-and-time">04/27/24 - 8:30 am</li>
-                    <li class="location">Mauricetown Fire Hall, 9544 Noble St, Mauricetown, NJ, 08329</li>
-                </ul>
-            </div>
-
-            <div class="event-card">
-                <ul class="event-info">
-                    <li class="name"><strong>Campaign Meet-n-Greet, "Charting our Course"</strong></li>
-                    <li class="description">Opportunity to meet Candidates Smith and Perella. <a href="https://www.facebook.com/photo/?fbid=122101378400285633&set=gm.1102696227510284">Details on Facebook</a></li>
-                    <li class="date-and-time">5/2/24 - 4:30 pm</li>
-                    <li class="location">Bayshore Center at Bivalve - 2800 High Street, Port Norris, NJ 08349</li>
-                </ul>
-            </div>
-
-            <div class="event-card">
-                <ul class="event-info">
                     <li class="name"><strong>CCRRO Breakfast Meeting</strong></li>
                     <li class="description">Hear the current Cumberland County Republicans messaging and meet the party.</li>
                     <li class="date-and-time">05/11/24 - 8:30 am</li>
                     <li class="location">Eastly Greenview Inn, 4049 Italia Ave, Vineland, NJ 08361</li>
+                </ul>
+            </div>
+
+            <div class="event-card">
+                <ul class="event-info">
+                    <li class="name"><strong>Campaign Fundraiser for Candidates Riley, Austino, and Capizola</strong></li>
+                    <li class="description">Support event for the candidates.</li>
+                    <li class="date-and-time">05/22/24 - 5:30 pm</li>
+                    <li class="location">Terra Nono Winery, 370 Garrison Road, Millville NJ, 08332</li>
                 </ul>
             </div>
 
