--- a/child_pages/cc-elections/Candidates/austino.html
+++ b/child_pages/cc-elections/Candidates/austino.html
@@ -93,6 +93,20 @@
         <br>
         <br>
 
+        <h4> Public Events </h4>
+
+        <div class="event-card">
+            <ul class="event-info">
+                <li class="name"><strong>Campaign Fundraiser for Candidates Riley, Austino, and Capizola</strong></li>
+                <li class="description">Support event for the candidates.</li>
+                <li class="date-and-time">05/22/24 - 5:30 pm</li>
+                <li class="location">Terra Nono Winery, 370 Garrison Road, Millville NJ, 08332</li>
+            </ul>
+        </div>
+
+        <br>
+        <br>
+
         <h4 class="sub-heading">individual agenda</h4>
             <div class="agenda-thesis">
                 As of 4/22/2024, Inform the Vote has scoured the internet and attempted to contact the former Sheriff multiple times. There seems to be no 
