--- a/child_pages/cc-elections/Candidates/murphy.html
+++ b/child_pages/cc-elections/Candidates/murphy.html
@@ -90,6 +90,17 @@
 
             <br>
             <br>
+
+            <h4> Public Events </h4>
+
+            <div class="event-card">
+                <ul class="event-info">
+                    <li class="name"><strong>Raviolifest Meet and Greet with Justin Murphy</strong></li>
+                    <li class="description">Campaign event for the candidate. <a href="https://www.facebook.com/events/840502041287285/?ref=newsfeed">Details on Facebook</a></li>
+                    <li class="date-and-time">05/18/24 - 5:00 pm</li>
+                    <li class="location">2 Chestnut Road, Medford NJ, 08055 </li>
+                </ul>
+            </div>
             
             <div class="agenda-per-party-site">
                 <h4> Public Events </h4>
