--- a/child_pages/cc-elections/Candidates/serrano-glassner.html
+++ b/child_pages/cc-elections/Candidates/serrano-glassner.html
@@ -91,6 +91,20 @@
             <br>
             <br>
             
+            <h4> Public Events </h4>
+
+        <div class="event-card">
+            <ul class="event-info">
+                <li class="name"><strong>Campaign Fundraiser for Serrano-Glassner</strong></li>
+                <li class="description">Support event for the candidate. <a href="https://www.facebook.com/photo?fbid=841002014509739&set=a.354593036483975">Details on Facebook</a></li>
+                <li class="date-and-time">05/16/24 - 6:00 pm</li>
+                <li class="location">7 Buddy Lane, Mendham NJ, 07926</li>
+            </ul>
+        </div>
+
+        <br>
+        <br>
+
             <h4 class="sub-heading">individual  agenda</h4>
             <div class="agenda-thesis">
                 <ul class="testa-agenda">
