--- a/child_pages/cc-elections/Candidates/austino.html
+++ b/child_pages/cc-elections/Candidates/austino.html
@@ -98,7 +98,7 @@
         <div class="event-card">
             <ul class="event-info">
                 <li class="name"><strong>Campaign Fundraiser for Candidates Riley, Austino, and Capizola</strong></li>
-                <li class="description">Support event for the candidates.</li>
+                <li class="description">Support event for the candidates. <a href="https://www.facebook.com/photo?fbid=122111298668284447&set=a.122109417842284447">Details on Facebook</a></li>
                 <li class="date-and-time">05/22/24 - 5:30 pm</li>
                 <li class="location">Terra Nono Winery, 370 Garrison Road, Millville NJ, 08332</li>
             </ul>
