--- a/child_pages/events.html
+++ b/child_pages/events.html
@@ -59,8 +59,26 @@
 
             <div class="event-card">
                 <ul class="event-info">
+                    <li class="name"><strong>Campaign Fundraiser for Serrano-Glassner</strong></li>
+                    <li class="description">Support event for the candidate. <a href="https://www.facebook.com/photo?fbid=841002014509739&set=a.354593036483975">Details on Facebook</a></li>
+                    <li class="date-and-time">05/16/24 - 6:00 pm</li>
+                    <li class="location">7 Buddy Lane, Mendham NJ, 07926</li>
+                </ul>
+            </div>
+
+            <div class="event-card">
+                <ul class="event-info">
+                    <li class="name"><strong>Raviolifest Meet and Greet with Justin Murphy</strong></li>
+                    <li class="description">Campaign event for the candidate. <a href="https://www.facebook.com/events/840502041287285/?ref=newsfeed">Details on Facebook</a></li>
+                    <li class="date-and-time">05/18/24 - 5:00 pm</li>
+                    <li class="location">2 Chestnut Road, Medford NJ, 08055 </li>
+                </ul>
+            </div>
+
+            <div class="event-card">
+                <ul class="event-info">
                     <li class="name"><strong>Campaign Fundraiser for Candidates Riley, Austino, and Capizola</strong></li>
-                    <li class="description">Support event for the candidates.</li>
+                    <li class="description">Support event for the candidates. <a href="https://www.facebook.com/photo?fbid=122111298668284447&set=a.122109417842284447">Details on Facebook</a></li>
                     <li class="date-and-time">05/22/24 - 5:30 pm</li>
                     <li class="location">Terra Nono Winery, 370 Garrison Road, Millville NJ, 08332</li>
                 </ul>
