--- a/child_pages/cc-elections/Candidates/alexander.html
+++ b/child_pages/cc-elections/Candidates/alexander.html
@@ -93,6 +93,17 @@
         <br>
         <br>
 
+        <h4> Public Events </h4>
+
+        <div class="event-card">
+            <ul class="event-info">
+                <li class="name"><strong>Atlantic City Women's March with Tim Alexander</strong></li>
+                <li class="description">Join and meet Tim Alexander <a href="https://www.facebook.com/timalexanderforcongress/posts/pfbid021fFRdDs8Kt5UysUf6LG4YfLPj6tSm1AGi6cJqSJnrni6gCbrxGsHgJpSkzM735q1l">Details on Facebook</a></li>
+                <li class="date-and-time">05/18/24 - 10:00 am</li>
+                <li class="location">Rhode Island Ave and The Boardwalk, Atlantic City NJ, 08401</li>
+            </ul>
+        </div>
+
         <h4 class="sub-heading">individual agenda</h4>
             <div class="agenda-thesis">
                 
