--- a/child_pages/events.html
+++ b/child_pages/events.html
@@ -77,6 +77,15 @@
 
             <div class="event-card">
                 <ul class="event-info">
+                    <li class="name"><strong>Atlantic City Women's March with Tim Alexander</strong></li>
+                    <li class="description">Join and meet Tim Alexander <a href="https://www.facebook.com/timalexanderforcongress/posts/pfbid021fFRdDs8Kt5UysUf6LG4YfLPj6tSm1AGi6cJqSJnrni6gCbrxGsHgJpSkzM735q1l">Details on Facebook</a></li>
+                    <li class="date-and-time">05/18/24 - 10:00 am</li>
+                    <li class="location">Rhode Island Ave and The Boardwalk, Atlantic City NJ, 08401</li>
+                </ul>
+            </div>
+
+            <div class="event-card">
+                <ul class="event-info">
                     <li class="name"><strong>Campaign Fundraiser for Candidates Riley, Austino, and Capizola</strong></li>
                     <li class="description">Support event for the candidates. <a href="https://www.facebook.com/photo?fbid=122111298668284447&set=a.122109417842284447">Details on Facebook</a></li>
                     <li class="date-and-time">05/22/24 - 5:30 pm</li>
