US senate candidates forum event added

--- a/child_pages/cc-elections/Candidates/campos-medina.html
+++ b/child_pages/cc-elections/Candidates/campos-medina.html
@@ -88,6 +88,20 @@
         <br>
         <br>
 
+        <h4> Public Events </h4>
+
+        <div class="event-card">
+            <ul class="event-info">
+                <li class="name"><strong>US Senate Candidate Forum at Bethany Baptist Church</strong></li>
+                <li class="description">A chance to hear from candidates Campos-Medina, Hamm, Harshaw, and Kim <a href="https://www.facebook.com/photo/?fbid=808923321270025&set=a.348865030609192">Details on Facebook</a></li>
+                <li class="date-and-time">05/20/24 - 6:00 pm</li>
+                <li class="location">275 West Market St, Newark NJ, 07103</li>
+            </ul>
+        </div>
+
+        <br>
+        <br>
+
         <h4 class="sub-heading">individual agenda</h4>
             <div class="agenda-thesis">
                 
