--- a/child_pages/events.html
+++ b/child_pages/events.html
@@ -86,6 +86,15 @@
 
             <div class="event-card">
                 <ul class="event-info">
+                    <li class="name"><strong>US Senate Candidate Forum at Bethany Baptist Church</strong></li>
+                    <li class="description">A chance to hear from candidates Campos-Medina, Hamm, Harshaw, and Kim <a href="https://www.facebook.com/photo/?fbid=808923321270025&set=a.348865030609192">Details on Facebook</a></li>
+                    <li class="date-and-time">05/20/24 - 6:00 pm</li>
+                    <li class="location">275 West Market St, Newark NJ, 07103</li>
+                </ul>
+            </div>
+
+            <div class="event-card">
+                <ul class="event-info">
                     <li class="name"><strong>Campaign Fundraiser for Candidates Riley, Austino, and Capizola</strong></li>
                     <li class="description">Support event for the candidates. <a href="https://www.facebook.com/photo?fbid=122111298668284447&set=a.122109417842284447">Details on Facebook</a></li>
                     <li class="date-and-time">05/22/24 - 5:30 pm</li>
