pbs interview with dem us senate primary candidates

--- a/child_pages/cc-elections/us_demprimary_senate.html
+++ b/child_pages/cc-elections/us_demprimary_senate.html
@@ -64,6 +64,8 @@
             <br>
             Andy Kim was a Rhoads scholar who has been a national security expert at the Pentagon and a civilian advisor to the military in Afghanistan.
             <br>
+            PBS Interview with all 3 candidates discussing top issues. <a href="https://twitter.com/AndyKimNJ" target="_blank" rel="noopener noreferrer" class="website-link">YouTube</a>
+            <br>
             Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
           </p>
         </div>
