--- a/child_pages/cc-elections/Candidates/campos-medina.html
+++ b/child_pages/cc-elections/Candidates/campos-medina.html
@@ -102,6 +102,16 @@
         <br>
         <br>
 
+        <h4> PBS Interview with all 3 candidates discussing top issues </h4>
+
+        <br>
+        <br>
+
+        <a href="https://twitter.com/AndyKimNJ" target="_blank" rel="noopener noreferrer" class="website-link">YouTube</a>
+
+        <br>
+        <br>
+
         <h4 class="sub-heading">individual agenda</h4>
             <div class="agenda-thesis">
                 
