hudson county view article and pbs link fix

--- a/child_pages/cc-elections/Candidates/campos-medina.html
+++ b/child_pages/cc-elections/Candidates/campos-medina.html
@@ -107,7 +107,17 @@
         <br>
         <br>
 
-        <a href="https://twitter.com/AndyKimNJ" target="_blank" rel="noopener noreferrer" class="website-link">YouTube</a>
+        <a href="https://www.youtube.com/watch?v=PJuTJqsgD9Y" target="_blank" rel="noopener noreferrer" class="website-link">YouTube</a>
+
+        <br>
+        <br>
+
+        <h4> Hudson County View article on Newark Candidates Forum </h4>
+
+        <br>
+        <br>
+
+        Article covering Jersey City Candidates forum.  <a href="https://hudsoncountyview.com/campos-medina-hamm-kim-come-to-jersey-city-for-u-s-senate-forum/" target="_blank" rel="noopener noreferrer" class="website-link">Hudson County View</a>
 
         <br>
         <br>
@@ -128,7 +138,7 @@
                     <li>Wants a pathway to citizenship for undocumented workers.</li>
                     <li>Wants business development in urban areas.</li>
                     <li>Wants expansion of federal small loans.</li>
-                    <li>Wants medicare for all.</li>
+                    <li>Wants medicare for all. <a href="https://www.tiktok.com/@ronbautistanj/video/7362961239875570987?_r=1&_t=8lwaamCgC6N" target="_blank" rel="noopener noreferrer" class="website-link">TikTok</a></li>
                     <li>Pro-choice advocate.</li>
                     <li>Wants a federal ban on assault weapons.</li>
                     <li>Wants improvement in K-12 education.</li>
@@ -136,6 +146,7 @@
                     <li>Wants to eliminate high interest loans and cancel student loan debt.</li>
                     <li>Wants green union jobs.</li>
                     <li>Wants a ceasefire in Gaza and a two-state solution.</li>
+                    
                 </ul>
             </div>
 
