--- a/child_pages/cc-elections/Candidates/hamm.html
+++ b/child_pages/cc-elections/Candidates/hamm.html
@@ -105,7 +105,17 @@
         <br>
         <br>
 
-        <a href="https://twitter.com/AndyKimNJ" target="_blank" rel="noopener noreferrer" class="website-link">YouTube</a>
+        <a href="https://www.youtube.com/watch?v=PJuTJqsgD9Y" target="_blank" rel="noopener noreferrer" class="website-link">YouTube</a>
+
+        <br>
+        <br>
+
+        <h4> Hudson County View article on Newark Candidates Forum </h4>
+
+        <br>
+        <br>
+
+        Article covering Jersey City Candidates forum.  <a href="https://hudsoncountyview.com/campos-medina-hamm-kim-come-to-jersey-city-for-u-s-senate-forum/" target="_blank" rel="noopener noreferrer" class="website-link">Hudson County View</a>
 
         <br>
         <br>
