pix11 interview with campos-medina added

--- a/child_pages/cc-elections/Candidates/campos-medina.html
+++ b/child_pages/cc-elections/Candidates/campos-medina.html
@@ -122,6 +122,16 @@
         <br>
         <br>
 
+        <h4> PIX11 Interview </h4>
+
+        <br>
+        <br>
+
+        Campiagn related interview  <a href="https://www.youtube.com/watch?v=kLCP46mZylU" target="_blank" rel="noopener noreferrer" class="website-link">YouTube</a>
+
+        <br>
+        <br>
+
         <h4 class="sub-heading">individual agenda</h4>
             <div class="agenda-thesis">
                 
