dem us senate primary debate event added

--- a/child_pages/cc-elections/Candidates/bashaw.html
+++ b/child_pages/cc-elections/Candidates/bashaw.html
@@ -96,6 +96,16 @@
 
             <br>
             <br>
+
+            <h4> NJ Spotlight News Interview </h4>
+
+        <br>
+        <br>
+
+        Campaign Related Interview <a href="https://www.youtube.com/watch?v=9zvFcFJBpLw" target="_blank" rel="noopener noreferrer" class="website-link">YouTube</a>
+
+        <br>
+        <br>
             
             <h4 class="sub-heading">individual  agenda</h4>
             <div class="agenda-thesis">
