--- a/child_pages/events.html
+++ b/child_pages/events.html
@@ -50,10 +50,19 @@
 
             <div class="event-card">
                 <ul class="event-info">
-                    <li class="name"><strong>CCRRO Breakfast Meeting</strong></li>
-                    <li class="description">Hear the current Cumberland County Republicans messaging and meet the party.</li>
-                    <li class="date-and-time">05/11/24 - 8:30 am</li>
-                    <li class="location">Eastly Greenview Inn, 4049 Italia Ave, Vineland, NJ 08361</li>
+                    <li class="name"><strong>Next Social Action Network Zoom Meeting</strong></li>
+                    <li class="description">A chance to hear from Hamm <a href="https://www.lawrencehamm4senate.info/events">Details on Hamm's Events Page</a></li>
+                    <li class="date-and-time">05/11/24 - 8:00 am</li>
+                    <li class="location"> <a href= "https://us02web.zoom.us/j/83367341702?pwd=SDUzR0lxbU1tVlNsa3hVdStUanpuZz09">Zoom Link</a></li>
+                </ul>
+            </div>
+
+            <div class="event-card">
+                <ul class="event-info">
+                    <li class="name"><strong>Democratic US Senate Primary Debate</strong></li>
+                    <li class="description">The candidates will debate the issues. Will be live-streamed. <a href="https://www.wnyc.org/story/wnyc-co-hosts-nj-senate-democratic-primary-debate-may-13/">Details on WNYC Page</a></li>
+                    <li class="date-and-time">05/13/24 - 8:00 pm</li>
+                    <li class="location"> 1 SOPAC Way, South Orange NJ, 07079</li>
                 </ul>
             </div>
 
