--- a/child_pages/cc-elections/Candidates/hamm.html
+++ b/child_pages/cc-elections/Candidates/hamm.html
@@ -90,12 +90,32 @@
 
         <div class="event-card">
             <ul class="event-info">
+                <li class="name"><strong>Next Social Action Network Zoom Meeting</strong></li>
+                <li class="description">A chance to hear from Hamm <a href="https://www.lawrencehamm4senate.info/events">Details on Hamm's Events Page</a></li>
+                <li class="date-and-time">05/11/24 - 8:00 am</li>
+                <li class="location"> <a href= "https://us02web.zoom.us/j/83367341702?pwd=SDUzR0lxbU1tVlNsa3hVdStUanpuZz09">Zoom Link</a></li>
+            </ul>
+        </div>
+
+        <div class="event-card">
+            <ul class="event-info">
+                <li class="name"><strong>Democratic US Senate Primary Debate</strong></li>
+                <li class="description">The candidates will debate the issues. Will be live-streamed. <a href="https://www.wnyc.org/story/wnyc-co-hosts-nj-senate-democratic-primary-debate-may-13/">Details on WNYC Page</a></li>
+                <li class="date-and-time">05/13/24 - 8:00 pm</li>
+                <li class="location"> 1 SOPAC Way, South Orange NJ, 07079</li>
+            </ul>
+        </div>
+        
+        <div class="event-card">
+            <ul class="event-info">
                 <li class="name"><strong>US Senate Candidate Forum at Bethany Baptist Church</strong></li>
                 <li class="description">A chance to hear from candidates Campos-Medina, Hamm, Harshaw, and Kim <a href="https://www.facebook.com/photo/?fbid=808923321270025&set=a.348865030609192">Details on Facebook</a></li>
                 <li class="date-and-time">05/20/24 - 6:00 pm</li>
                 <li class="location">275 West Market St, Newark NJ, 07103</li>
             </ul>
         </div>
+
+       
 
         <br>
         <br>
@@ -116,6 +136,36 @@
         <br>
 
         Article covering Jersey City Candidates forum.  <a href="https://hudsoncountyview.com/campos-medina-hamm-kim-come-to-jersey-city-for-u-s-senate-forum/" target="_blank" rel="noopener noreferrer" class="website-link">Hudson County View</a>
+
+        <br>
+        <br>
+
+        <h4> Democracy Now Interview </h4>
+
+        <br>
+        <br>
+
+        Campaign Related Interview.  <a href="https://www.youtube.com/watch?v=YutPtSaYtOc" target="_blank" rel="noopener noreferrer" class="website-link">Youtube</a>
+
+        <br>
+        <br>
+
+        <h4> Center for Cooperative Media Interview </h4>
+
+        <br>
+        <br>
+
+        Campaign Related Interview.  <a href="https://www.youtube.com/watch?v=M_EbsLYmqGQ" target="_blank" rel="noopener noreferrer" class="website-link">Youtube</a>
+
+        <br>
+        <br>
+
+        <h4> NJ Spotlight News Interview </h4>
+
+        <br>
+        <br>
+
+        Campaign Related Interview.  <a href="https://www.youtube.com/watch?v=kQgtqrIuVH4" target="_blank" rel="noopener noreferrer" class="website-link">Youtube</a>
 
         <br>
         <br>
