--- a/child_pages/cc-elections/Candidates/kim.html
+++ b/child_pages/cc-elections/Candidates/kim.html
@@ -89,6 +89,15 @@
 
         <div class="event-card">
             <ul class="event-info">
+                <li class="name"><strong>Democratic US Senate Primary Debate</strong></li>
+                <li class="description">The candidates will debate the issues. Will be live-streamed. <a href="https://www.wnyc.org/story/wnyc-co-hosts-nj-senate-democratic-primary-debate-may-13/">Details on WNYC Page</a></li>
+                <li class="date-and-time">05/13/24 - 8:00 pm</li>
+                <li class="location"> 1 SOPAC Way, South Orange NJ, 07079</li>
+            </ul>
+        </div>
+        
+        <div class="event-card">
+            <ul class="event-info">
                 <li class="name"><strong>US Senate Candidate Forum at Bethany Baptist Church</strong></li>
                 <li class="description">A chance to hear from candidates Campos-Medina, Hamm, Harshaw, and Kim <a href="https://www.facebook.com/photo/?fbid=808923321270025&set=a.348865030609192">Details on Facebook</a></li>
                 <li class="date-and-time">05/20/24 - 6:00 pm</li>
@@ -115,6 +124,16 @@
         <br>
 
         Article covering Jersey City Candidates forum.  <a href="https://hudsoncountyview.com/campos-medina-hamm-kim-come-to-jersey-city-for-u-s-senate-forum/" target="_blank" rel="noopener noreferrer" class="website-link">Hudson County View</a>
+
+        <br>
+        <br>
+
+        <h4> Pix11 Interview </h4>
+
+        <br>
+        <br>
+
+        Campaign Related Interview.  <a href="https://www.youtube.com/watch?v=coPX3d9GbPc" target="_blank" rel="noopener noreferrer" class="website-link">YouTube</a>
 
         <br>
         <br>
