--- a/child_pages/get-involved.html
+++ b/child_pages/get-involved.html
@@ -23,14 +23,18 @@
                 <div>
                     <ul class="links">
                         <li class="link"><a href="../index.html">Home</a></li>
-                        <li class="link"><a href="cc-elections/cc_demprimary_county_clerk_2024.html">Cumberland County Elections</a></li>
-                        <li class="link"><a href="cc-elections/cc_election_issues.html">Issues</a></li>
-                        <li class="link"><a href="vsb-elections/vsb_election_candidates.html">Vineland School Board Elections</a></li>
-                        <li class="link"><a href="vsb-elections/vsb_election_issues.html">School Board Issues</a></li>
-                        <li class="link"><a href="cc-elections/unanswered_questions.html">Unanswered Questions</a></li>
+                        <li class="link"><a href="cc-elections/cc_demprimary_county_commissioner_2024.html">Cumberland County Elections</a></li>
+                        <li class="link"><a href="cc-elections/cc_election_issues.html">County Issues</a></li>
+                        <li class="link"><a href="cc-elections/us_repubprimary_senate.html">Republican Primary US Senate</a></li>
+                        <li class="link"><a href="cc-elections/us_demprimary_senate.html">Democrat Primary US Senate</a></li>
+                        <li class="link"><a href="cc-elections/us_houseofrepresentatives_demprimary.html">Democrat Primary US House of Representatives</a></li>
+                        <li class="link"><a href="cc-elections/us_president_demprimary.html">Democrat Primary President</a></li>
+                        <!-- <li class="link"><a href="../vsb-elections/vsb_election_candidates.html">Vineland School Board Elections</a></li>
+                        <li class="link"><a href="../vsb-elections/vsb_election_issues.html">School Board Issues</a></li>
+                        <li class="link"><a href="../cc-elections/unanswered_questions.html">Unanswered Questions</a></li> -->
                         <li class="link"><a href="get-involved.html">Get Involved</a></li>
                         <li class="link"><a href="events.html">Events</a></li>
-                        <li class="link"><a href="candidates-forum-op-ed.html">Candidates Forum Op-Ed</a></li>
+                        <!-- <li class="link"><a href="..candidates-forum-op-ed.html">Candidates Forum Op-Ed</a></li> -->
                         <li class="link"><a href="about.html">About</a></li>
                         <li class="link"><a href="contact.html">Contact</a></li>
                     </ul>
